<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/background_shader"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_utente"
                        android:textColor="@color/colorSecondary"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false">

                        <FrameLayout
                            android:layout_width="84dp"
                            android:layout_height="84dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_margin="2dp"
                                android:elevation="12dp"
                                android:innerRadius="0dp"
                                android:shape="ring"
                                android:thicknessRatio="1.9"
                                app:cardCornerRadius="40dp">

                                <ImageView
                                    android:id="@+id/imgProfilo"
                                    android:layout_width="80dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="0"
                                    android:scaleType="fitCenter"
                                    app:srcCompat="@drawable/ic_default_user" />

                            </androidx.cardview.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="bottom"
                                android:orientation="horizontal"
                                android:translationZ="99dp">

                                <ImageButton
                                    android:id="@+id/btDelete"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:background="@color/zxing_transparent"
                                    android:scaleType="centerCrop"
                                    app:srcCompat="@drawable/ic_delete" />
                            </LinearLayout>

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="6dp"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/txtDisplayName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="6dp"
                                android:text="TextView" />
                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:hint="@string/hint_data"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtDataSetting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="datetime" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txtInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:background="@color/primaryLightColor"
                        android:padding="4dp"
                        android:text="@string/no_complete_utente"
                        android:textColor="@android:color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_salva" />


                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="0"
                    android:background="@color/Gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btLogOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="36dp"
                        android:background="@drawable/selector_second_button"
                        android:text="LogOut" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/icon8licence"
                        android:textColor="#29770D" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/chiudi" />

</LinearLayout>